fix: Fixed menu z-index and height for mobile view

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -39,15 +39,16 @@ body {
 	}
 
 	&__menu {
-		font-size: 0;
 		display: block;
 		position: absolute;
 		top: 0;
-		height: 100vh;
 		right: -300px;
+		z-index: 100;
+		height: 100vh;
+		font-size: 0;
 		justify-content: end;
 		transition: right 0.8s;
-
+		background-color: colors.$main-color;
 		li {
 			list-style-type: none;
 			font-size: 0;
@@ -60,7 +61,7 @@ body {
 			text-decoration: none;
 			text-wrap: nowrap;
 			color: colors.$secondary-color;
-			background-color: colors.$main-color;
+
 			&:hover {
 				background-color: colors.$secondary-color;
 				color: colors.$main-color;
